--- a/Examen/Examen/Examen.csproj
+++ b/Examen/Examen/Examen.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entrenador.cs" />
+    <Compile Include="equipo.cs" />
+    <Compile Include="Jugador.cs" />
+    <Compile Include="Medico.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
